styles.css
@font-face {
    font-family: 'italianaregular';
    src: url('./fonts/italiana-regular-webfont.woff2') format('woff2'),
         url('./fonts/italiana-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'robotoregular';
    src: url('./fonts/roboto-variablefont_wdthwght-webfont.woff2') format('woff2'),
         url('./fonts.roboto-variablefont_wdthwght-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'robotoitalic';
    src: url('./fonts/roboto-italic-variablefont_wdthwght-webfont.woff2') format('woff2'),
         url('./fonts/roboto-italic-variablefont_wdthwght-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    line-height: calc(1em + 0.5rem);
}

html, body {
    height: 100%;
    width: 100%;
}

body {
    font-family: 'robotoregular', san-serif;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
    letter-spacing: 0.01em;
}

.container {
    display: flex;
    min-height: 100vh;
    flex-direction: row;
}
.visual {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;
    position: relative;
    height: 100vh;      
}
.link {
    position: absolute;
    color: white;
    text-align: center;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}
a {
    color: white;
}
.logo {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 60px;
    font-weight: bold;
    text-align: center;
    top: 25%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    color: white;
    background-color: rgba(0, 0, 0, 0.55);
    font-family: 'italianaregular';
    padding: 0.5em 0 0.5em 0;
}
.img {
    flex: 1;
    width: 100%;
    background: url(./background_img.jpg) center/cover no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding: 20px;
    position: relative;
}

.sign-in {
    flex: 1.8;
    display: flex;
    flex-direction: column;
    background-color: #f5f4f4;
    justify-content: center;
}
.form-content {
    background-color: white;
    box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, 0.384);;
    padding-top: 2em;
    padding-bottom: 2em;
}
.sign-in > div {
    display: flex;
}
.text, .form, .form-btn, .log-in {
    margin-bottom: 2em;
    margin-top: 3em;
    margin-left: 2em;
}
.text {
    display: flex;
    flex-direction: column;
    font-size: 1.3em;
    font-weight: 600;
    margin-right: 5em;
    margin-top: 0;
}
.form {
    flex-direction: column;
    margin-left: 0;
}
.form div[class*="row"] {
    display: flex;
    font-size: 1em;
    flex-wrap: wrap;
    padding: 0;
    border-radius: 1em;
    font-family: sans-serif;
    width: 100%;
    gap: 1em;
}
.form label {
    padding: 0;
    font-size: 0.7rem;
    font-weight: bold;
}
label, button {
    font-size: inherit;
    padding: 0.2em;
    padding-left: 0;
    margin: 0;
}
label {
    gap: 16px;
    color: #333333;
}
input {
    flex: 1 1 auto;
    min-width: 120px;
    max-width: 100%;
    width: auto;
    padding: 4px 5px;
    font-size: 1em;
    border-radius: 5px;
    border: 2px solid #E5E7EB;
}
input:focus {
    border: 1px solid blue;
    outline: none;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.384);;
}
input[type="password"]:invalid {
    border: 1px solid red;
}
.form div[class*="input"] {
    display: flex;
    flex: 1;
    margin-right: 2em;
    flex-direction: column;
    margin-bottom: 1em;
}
h2 {
    font-size: 1.4em;
    margin-bottom: 1em;
    margin-top: 1em;
    margin-left: 2em;
    margin-inline-start: 32px;
    color: #333333;
    /* margin-block-end: 2px; */
}
.form-inputs {
    padding-left: 2em;
}
.form-btn button {
    background-color: #596D48;
    font-weight: bold;
    color: white;
    padding: 0.85em 3em;
    border: 0;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.384);;
}
.form-btn button:hover {
    background-color: hsl(92, 20%, 55%);
}
.form a {
    color: #596D48;
    text-decoration: none;
    font-weight: bold;
    padding: 0.2em;
    padding-left: 0;
    margin: 0;
    margin-right: 4em;
}
.log-in {
    margin-top: 0; 
}

